# UnedSoftwareSeguro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_deps.bat
ChatApp/: ChatApp.sln
ChatApp/ChatApp/: ChatApp.cpp  ChatApp.vcxproj  ChatApp.vcxproj.filters  DbConnection.h  stdafx.cpp
client/: CMakeLists.txt  Client.cpp
cmake/macros/: FindMySQL.cmake  FindSQLConector.cmake
common/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  ConfigurationManager.cpp  ConfigurationManager.h  DLLDefines.h  DbConnection.cpp  DbConnection.h  ISerializable.h  NetworkConnection.cpp  NetworkConnection.h  NetworkingFactory.h  OperationCodes.h  SerializablePOD.h  ServerConnection.cpp  ServerConnection.h  UdpConnection.cpp  UdpConnection.h  User.cpp  User.h  UserGateway.cpp  UserGateway.h
server/: CMakeLists.txt  Server.cpp  server.properties
test/: CMakeLists.txt  ConfigurationManagerTest.cpp  NetworkConnectionTest.cpp  UserTest.cpp  main.cpp  testFile.properties
